# main.py

./: .gitignore  README.md  env.template  main.py  pyproject.toml
data/: operations.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  file_reader.py  generators.py  logger_config.py  masks.py  processing.py  utils.py  widget.py
tests/: test.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_fixture.py  test_generators.py  test_logging_requirements.py  test_main.py  test_masks.py  test_processing.py  test_transaction_operations.py  test_utils.py  test_widget.py
